crates/gmsh/include/gmshc.h


GMSH_API void gmshModelMeshFieldGetNumber(const int tag,
                                          const char *option,
                                          double *value,
                                          int *ierr);
GMSH_API void gmshModelMeshFieldSetString(const int tag,
                                          const char *option,
                                          const char *value,
                                          int *ierr);
GMSH_API void gmshModelMeshFieldGetString(const int tag,
                                          const char *option,
                                          char **value,
                                          int *ierr);
GMSH_API void gmshModelMeshFieldSetNumbers(const int tag,
                                           const char *option,
                                           const double *values, const size_t values_n,
                                           int *ierr);
GMSH_API void gmshModelMeshFieldGetNumbers(const int tag,
                                           const char *option,
                                           double **values, size_t *values_n,
                                           int *ierr);
GMSH_API void gmshModelMeshFieldSetAsBackgroundMesh(const int tag,
                                                    int *ierr);
GMSH_API void gmshModelMeshFieldSetAsBoundaryLayer(const int tag,
                                                   int *ierr);
GMSH_API int gmshModelGeoAddPoint(const double x,
                                  const double y,
                                  const double z,
                                  const double meshSize,
                                  const int tag,
                                  int *ierr);
GMSH_API int gmshModelGeoAddLine(const int startTag,
                                 const int endTag,
                                 const int tag,
                                 int *ierr);
GMSH_API int gmshModelGeoAddCircleArc(const int startTag,
                                      const int centerTag,
                                      const int endTag,
                                      const int tag,
                                      const double nx,
                                      const double ny,
                                      const double nz,
                                      int *ierr);
GMSH_API int gmshModelGeoAddEllipseArc(const int startTag,
                                       const int centerTag,
                                       const int majorTag,
                                       const int endTag,
                                       const int tag,
                                       const double nx,
                                       const double ny,
                                       const double nz,
                                       int *ierr);
GMSH_API int gmshModelGeoAddSpline(const int *pointTags, const size_t pointTags_n,
                                   const int tag,
                                   int *ierr);
GMSH_API int gmshModelGeoAddBSpline(const int *pointTags, const size_t pointTags_n,
                                    const int tag,
                                    int *ierr);
GMSH_API int gmshModelGeoAddBezier(const int *pointTags, const size_t pointTags_n,
                                   const int tag,
                                   int *ierr);
GMSH_API int gmshModelGeoAddPolyline(const int *pointTags, const size_t pointTags_n,
                                     const int tag,
                                     int *ierr);
GMSH_API int gmshModelGeoAddCompoundSpline(const int *curveTags, const size_t curveTags_n,
                                           const int numIntervals,
                                           const int tag,
                                           int *ierr);
GMSH_API int gmshModelGeoAddCompoundBSpline(const int *curveTags, const size_t curveTags_n,
                                            const int numIntervals,
                                            const int tag,
                                            int *ierr);
GMSH_API int gmshModelGeoAddCurveLoop(const int *curveTags, const size_t curveTags_n,
                                      const int tag,
                                      const int reorient,
                                      int *ierr);
GMSH_API void gmshModelGeoAddCurveLoops(const int *curveTags, const size_t curveTags_n,
                                        int **tags, size_t *tags_n,
                                        int *ierr);
GMSH_API int gmshModelGeoAddPlaneSurface(const int *wireTags, const size_t wireTags_n,
                                         const int tag,
                                         int *ierr);
GMSH_API int gmshModelGeoAddSurfaceFilling(const int *wireTags, const size_t wireTags_n,
                                           const int tag,
                                           const int sphereCenterTag,
                                           int *ierr);
GMSH_API int gmshModelGeoAddSurfaceLoop(const int *surfaceTags, const size_t surfaceTags_n,
                                        const int tag,
                                        int *ierr);
GMSH_API int gmshModelGeoAddVolume(const int *shellTags, const size_t shellTags_n,
                                   const int tag,
                                   int *ierr);
GMSH_API int gmshModelGeoAddGeometry(const char *geometry,
                                     const double *numbers, const size_t numbers_n,
                                     const char *const *strings, const size_t strings_n,
                                     const int tag,
                                     int *ierr);
GMSH_API int gmshModelGeoAddPointOnGeometry(const int geometryTag,
                                            const double x,
                                            const double y,
                                            const double z,
                                            const double meshSize,
                                            const int tag,
                                            int *ierr);
GMSH_API void gmshModelGeoExtrude(const int *dimTags, const size_t dimTags_n,
                                  const double dx,
                                  const double dy,
                                  const double dz,
                                  int **outDimTags, size_t *outDimTags_n,
                                  const int *numElements, const size_t numElements_n,
                                  const double *heights, const size_t heights_n,
                                  const int recombine,
                                  int *ierr);
GMSH_API void gmshModelGeoRevolve(const int *dimTags, const size_t dimTags_n,
                                  const double x,
                                  const double y,
                                  const double z,
                                  const double ax,
                                  const double ay,
                                  const double az,
                                  const double angle,
                                  int **outDimTags, size_t *outDimTags_n,
                                  const int *numElements, const size_t numElements_n,
                                  const double *heights, const size_t heights_n,
                                  const int recombine,
                                  int *ierr);
GMSH_API void gmshModelGeoTwist(const int *dimTags, const size_t dimTags_n,
                                const double x,
                                const double y,
                                const double z,
                                const double dx,
                                const double dy,
                                const double dz,
                                const double ax,
                                const double ay,
                                const double az,
                                const double angle,
                                int **outDimTags, size_t *outDimTags_n,
                                const int *numElements, const size_t numElements_n,
                                const double *heights, const size_t heights_n,
                                const int recombine,
                                int *ierr);
GMSH_API void gmshModelGeoExtrudeBoundaryLayer(const int *dimTags, const size_t dimTags_n,
                                               int **outDimTags, size_t *outDimTags_n,
                                               const int *numElements, const size_t numElements_n,
                                               const double *heights, const size_t heights_n,
                                               const int recombine,
                                               const int second,
                                               const int viewIndex,
                                               int *ierr);
GMSH_API void gmshModelGeoTranslate(const int *dimTags, const size_t dimTags_n,
                                    const double dx,
                                    const double dy,
                                    const double dz,
                                    int *ierr);
GMSH_API void gmshModelGeoRotate(const int *dimTags, const size_t dimTags_n,
                                 const double x,
                                 const double y,
                                 const double z,
                                 const double ax,
                                 const double ay,
                                 const double az,
                                 const double angle,
                                 int *ierr);
GMSH_API void gmshModelGeoDilate(const int *dimTags, const size_t dimTags_n,
                                 const double x,
                                 const double y,
                                 const double z,
                                 const double a,
                                 const double b,
                                 const double c,
                                 int *ierr);
GMSH_API void gmshModelGeoMirror(const int *dimTags, const size_t dimTags_n,
                                 const double a,
                                 const double b,
                                 const double c,
                                 const double d,
                                 int *ierr);
GMSH_API void gmshModelGeoSymmetrize(const int *dimTags, const size_t dimTags_n,
                                     const double a,
                                     const double b,
                                     const double c,
                                     const double d,
                                     int *ierr);
GMSH_API void gmshModelGeoCopy(const int *dimTags, const size_t dimTags_n,
                               int **outDimTags, size_t *outDimTags_n,
                               int *ierr);
GMSH_API void gmshModelGeoRemove(const int *dimTags, const size_t dimTags_n,
                                 const int recursive,
                                 int *ierr);
GMSH_API void gmshModelGeoRemoveAllDuplicates(int *ierr);
GMSH_API void gmshModelGeoSplitCurve(const int tag,
                                     const int *pointTags, const size_t pointTags_n,
                                     int **curveTags, size_t *curveTags_n,
                                     int *ierr);
GMSH_API int gmshModelGeoGetMaxTag(const int dim,
                                   int *ierr);
GMSH_API void gmshModelGeoSetMaxTag(const int dim,
                                    const int maxTag,
                                    int *ierr);
GMSH_API int gmshModelGeoAddPhysicalGroup(const int dim,
                                          const int *tags, const size_t tags_n,
                                          const int tag,
                                          const char *name,
                                          int *ierr);
GMSH_API void gmshModelGeoRemovePhysicalGroups(const int *dimTags, const size_t dimTags_n,
                                               int *ierr);
GMSH_API void gmshModelGeoSynchronize(int *ierr);