crates/gmsh/src/bindings.rs

unsafe extern "C" {
    pub fn gmshModelMeshFieldGetNumber(
        tag: ::std::os::raw::c_int,
        option: *const ::std::os::raw::c_char,
        value: *mut f64,
        ierr: *mut ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn gmshModelMeshFieldSetString(
        tag: ::std::os::raw::c_int,
        option: *const ::std::os::raw::c_char,
        value: *const ::std::os::raw::c_char,
        ierr: *mut ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn gmshModelMeshFieldGetString(
        tag: ::std::os::raw::c_int,
        option: *const ::std::os::raw::c_char,
        value: *mut *mut ::std::os::raw::c_char,
        ierr: *mut ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn gmshModelMeshFieldSetNumbers(
        tag: ::std::os::raw::c_int,
        option: *const ::std::os::raw::c_char,
        values: *const f64,
        values_n: usize,
        ierr: *mut ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn gmshModelMeshFieldGetNumbers(
        tag: ::std::os::raw::c_int,
        option: *const ::std::os::raw::c_char,
        values: *mut *mut f64,
        values_n: *mut usize,
        ierr: *mut ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn gmshModelMeshFieldSetAsBackgroundMesh(
        tag: ::std::os::raw::c_int,
        ierr: *mut ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn gmshModelMeshFieldSetAsBoundaryLayer(
        tag: ::std::os::raw::c_int,
        ierr: *mut ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn gmshModelGeoAddPoint(
        x: f64,
        y: f64,
        z: f64,
        meshSize: f64,
        tag: ::std::os::raw::c_int,
        ierr: *mut ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn gmshModelGeoAddLine(
        startTag: ::std::os::raw::c_int,
        endTag: ::std::os::raw::c_int,
        tag: ::std::os::raw::c_int,
        ierr: *mut ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn gmshModelGeoAddCircleArc(
        startTag: ::std::os::raw::c_int,
        centerTag: ::std::os::raw::c_int,
        endTag: ::std::os::raw::c_int,
        tag: ::std::os::raw::c_int,
        nx: f64,
        ny: f64,
        nz: f64,
        ierr: *mut ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn gmshModelGeoAddEllipseArc(
        startTag: ::std::os::raw::c_int,
        centerTag: ::std::os::raw::c_int,
        majorTag: ::std::os::raw::c_int,
        endTag: ::std::os::raw::c_int,
        tag: ::std::os::raw::c_int,
        nx: f64,
        ny: f64,
        nz: f64,
        ierr: *mut ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn gmshModelGeoAddSpline(
        pointTags: *const ::std::os::raw::c_int,
        pointTags_n: usize,
        tag: ::std::os::raw::c_int,
        ierr: *mut ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn gmshModelGeoAddBSpline(
        pointTags: *const ::std::os::raw::c_int,
        pointTags_n: usize,
        tag: ::std::os::raw::c_int,
        ierr: *mut ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn gmshModelGeoAddBezier(
        pointTags: *const ::std::os::raw::c_int,
        pointTags_n: usize,
        tag: ::std::os::raw::c_int,
        ierr: *mut ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn gmshModelGeoAddPolyline(
        pointTags: *const ::std::os::raw::c_int,
        pointTags_n: usize,
        tag: ::std::os::raw::c_int,
        ierr: *mut ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn gmshModelGeoAddCompoundSpline(
        curveTags: *const ::std::os::raw::c_int,
        curveTags_n: usize,
        numIntervals: ::std::os::raw::c_int,
        tag: ::std::os::raw::c_int,
        ierr: *mut ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn gmshModelGeoAddCompoundBSpline(
        curveTags: *const ::std::os::raw::c_int,
        curveTags_n: usize,
        numIntervals: ::std::os::raw::c_int,
        tag: ::std::os::raw::c_int,
        ierr: *mut ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn gmshModelGeoAddCurveLoop(
        curveTags: *const ::std::os::raw::c_int,
        curveTags_n: usize,
        tag: ::std::os::raw::c_int,
        reorient: ::std::os::raw::c_int,
        ierr: *mut ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn gmshModelGeoAddCurveLoops(
        curveTags: *const ::std::os::raw::c_int,
        curveTags_n: usize,
        tags: *mut *mut ::std::os::raw::c_int,
        tags_n: *mut usize,
        ierr: *mut ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn gmshModelGeoAddPlaneSurface(
        wireTags: *const ::std::os::raw::c_int,
        wireTags_n: usize,
        tag: ::std::os::raw::c_int,
        ierr: *mut ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn gmshModelGeoAddSurfaceFilling(
        wireTags: *const ::std::os::raw::c_int,
        wireTags_n: usize,
        tag: ::std::os::raw::c_int,
        sphereCenterTag: ::std::os::raw::c_int,
        ierr: *mut ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn gmshModelGeoAddSurfaceLoop(
        surfaceTags: *const ::std::os::raw::c_int,
        surfaceTags_n: usize,
        tag: ::std::os::raw::c_int,
        ierr: *mut ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn gmshModelGeoAddVolume(
        shellTags: *const ::std::os::raw::c_int,
        shellTags_n: usize,
        tag: ::std::os::raw::c_int,
        ierr: *mut ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn gmshModelGeoAddGeometry(
        geometry: *const ::std::os::raw::c_char,
        numbers: *const f64,
        numbers_n: usize,
        strings: *const *const ::std::os::raw::c_char,
        strings_n: usize,
        tag: ::std::os::raw::c_int,
        ierr: *mut ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn gmshModelGeoAddPointOnGeometry(
        geometryTag: ::std::os::raw::c_int,
        x: f64,
        y: f64,
        z: f64,
        meshSize: f64,
        tag: ::std::os::raw::c_int,
        ierr: *mut ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn gmshModelGeoExtrude(
        dimTags: *const ::std::os::raw::c_int,
        dimTags_n: usize,
        dx: f64,
        dy: f64,
        dz: f64,
        outDimTags: *mut *mut ::std::os::raw::c_int,
        outDimTags_n: *mut usize,
        numElements: *const ::std::os::raw::c_int,
        numElements_n: usize,
        heights: *const f64,
        heights_n: usize,
        recombine: ::std::os::raw::c_int,
        ierr: *mut ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn gmshModelGeoRevolve(
        dimTags: *const ::std::os::raw::c_int,
        dimTags_n: usize,
        x: f64,
        y: f64,
        z: f64,
        ax: f64,
        ay: f64,
        az: f64,
        angle: f64,
        outDimTags: *mut *mut ::std::os::raw::c_int,
        outDimTags_n: *mut usize,
        numElements: *const ::std::os::raw::c_int,
        numElements_n: usize,
        heights: *const f64,
        heights_n: usize,
        recombine: ::std::os::raw::c_int,
        ierr: *mut ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn gmshModelGeoTwist(
        dimTags: *const ::std::os::raw::c_int,
        dimTags_n: usize,
        x: f64,
        y: f64,
        z: f64,
        dx: f64,
        dy: f64,
        dz: f64,
        ax: f64,
        ay: f64,
        az: f64,
        angle: f64,
        outDimTags: *mut *mut ::std::os::raw::c_int,
        outDimTags_n: *mut usize,
        numElements: *const ::std::os::raw::c_int,
        numElements_n: usize,
        heights: *const f64,
        heights_n: usize,
        recombine: ::std::os::raw::c_int,
        ierr: *mut ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn gmshModelGeoExtrudeBoundaryLayer(
        dimTags: *const ::std::os::raw::c_int,
        dimTags_n: usize,
        outDimTags: *mut *mut ::std::os::raw::c_int,
        outDimTags_n: *mut usize,
        numElements: *const ::std::os::raw::c_int,
        numElements_n: usize,
        heights: *const f64,
        heights_n: usize,
        recombine: ::std::os::raw::c_int,
        second: ::std::os::raw::c_int,
        viewIndex: ::std::os::raw::c_int,
        ierr: *mut ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn gmshModelGeoTranslate(
        dimTags: *const ::std::os::raw::c_int,
        dimTags_n: usize,
        dx: f64,
        dy: f64,
        dz: f64,
        ierr: *mut ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn gmshModelGeoRotate(
        dimTags: *const ::std::os::raw::c_int,
        dimTags_n: usize,
        x: f64,
        y: f64,
        z: f64,
        ax: f64,
        ay: f64,
        az: f64,
        angle: f64,
        ierr: *mut ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn gmshModelGeoDilate(
        dimTags: *const ::std::os::raw::c_int,
        dimTags_n: usize,
        x: f64,
        y: f64,
        z: f64,
        a: f64,
        b: f64,
        c: f64,
        ierr: *mut ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn gmshModelGeoMirror(
        dimTags: *const ::std::os::raw::c_int,
        dimTags_n: usize,
        a: f64,
        b: f64,
        c: f64,
        d: f64,
        ierr: *mut ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn gmshModelGeoSymmetrize(
        dimTags: *const ::std::os::raw::c_int,
        dimTags_n: usize,
        a: f64,
        b: f64,
        c: f64,
        d: f64,
        ierr: *mut ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn gmshModelGeoCopy(
        dimTags: *const ::std::os::raw::c_int,
        dimTags_n: usize,
        outDimTags: *mut *mut ::std::os::raw::c_int,
        outDimTags_n: *mut usize,
        ierr: *mut ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn gmshModelGeoRemove(
        dimTags: *const ::std::os::raw::c_int,
        dimTags_n: usize,
        recursive: ::std::os::raw::c_int,
        ierr: *mut ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn gmshModelGeoRemoveAllDuplicates(ierr: *mut ::std::os::raw::c_int);
}
unsafe extern "C" {
    pub fn gmshModelGeoSplitCurve(
        tag: ::std::os::raw::c_int,
        pointTags: *const ::std::os::raw::c_int,
        pointTags_n: usize,
        curveTags: *mut *mut ::std::os::raw::c_int,
        curveTags_n: *mut usize,
        ierr: *mut ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn gmshModelGeoGetMaxTag(
        dim: ::std::os::raw::c_int,
        ierr: *mut ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn gmshModelGeoSetMaxTag(
        dim: ::std::os::raw::c_int,
        maxTag: ::std::os::raw::c_int,
        ierr: *mut ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn gmshModelGeoAddPhysicalGroup(
        dim: ::std::os::raw::c_int,
        tags: *const ::std::os::raw::c_int,
        tags_n: usize,
        tag: ::std::os::raw::c_int,
        name: *const ::std::os::raw::c_char,
        ierr: *mut ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn gmshModelGeoRemovePhysicalGroups(
        dimTags: *const ::std::os::raw::c_int,
        dimTags_n: usize,
        ierr: *mut ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn gmshModelGeoSynchronize(ierr: *mut ::std::os::raw::c_int);
}
